sign up, email validation with dev console, refactoring